--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,13 @@
 
 <!-- Body -->
 <section class="ae-container-fluid rk-main">
-  <app-portfolio></app-portfolio>
+
+
+  <!-- Page -->
+  <router-outlet></router-outlet>
+  <!-- <app-about></app-about>
+  <app-producto></app-producto>
+  <app-portfolio></app-portfolio> -->
 </section>
 
 
